@@ -62,9 +62,10 @@ GTKDOC_CFLAGS = \
 	-I$(includedir)
 
 GTKDOC_LIBS = \
-	-u $(SYMPREFIX)xcf_init		   \
-	-u $(SYMPREFIX)internal_procs_init \
-	-u $(SYMPREFIX)gimp_coords_mix	   \
+	-u $(SYMPREFIX)xcf_init		   		\
+	-u $(SYMPREFIX)internal_procs_init 		\
+	-u $(SYMPREFIX)gimp_coords_mix	   		\
+	-u $(SYMPREFIX)gimp_plug_in_manager_restore	\
 	$(top_builddir)/app/app_procs.o					     \
         $(top_builddir)/app/batch.o					     \
         $(top_builddir)/app/errors.o					     \
@@ -107,8 +108,6 @@ GTKDOC_LIBS = \
         $(GTHREAD_LIBS)                                                      \
 	$(RT_LIBS)							     \
         $(INTLLIBS)
-
-LDFLAGS = -u $(SYMPREFIX)xcf_init -u $(SYMPREFIX)internal_procs_init
 
 
 include $(top_srcdir)/gtk-doc.make
